--- a/test.tex
+++ b/test.tex
@@ -661,7 +661,7 @@ ln137/ln(a/137) \approx (2+135/d_{e})^{2}
 \end{equation}
 meaning the ratio $a/137$ acts as a canonical ratio. Indeed, the Bizouard constant $f$, precising \cite{Sanchez1} the inverse of the standard 'strong coupling constant' 0.1184(7): $$f = a_w/2\pi(pH)^{3/2} \approx 8.43450$$ appears as a computation base, in the following dramatic relations, to 0.3, 0.2, 0.7 \% and 22 ppb:
 $$(a/137)^F \approx 3^a \approx f^{f^2}/\pi \approx (O_B/f)^2 \approx P^4 (2/3)^a (p/p_0)^2 $$
-proving that the base 3, \textit{the optimal whole number basis}, is also used by the Cosmos as well as $O_B$, the cardinal order  of the Baby Monster (as confirmed below). 
+proving that the base 3, \textit{the optimal whole number base}, is also used by the Cosmos. Also $O_B$, the cardinal order  of the Baby Monster plays a role (as confirmed below). 
 Note that while $R/\lambdabar_e \approx 2^{128}$, to 0.6 \%, $R^{\prime}/\lambdabar_e \approx 27^{27}$, with $27 = 3^3$ to 0.03 \%  Moreover, to 27 ppb:
 $$ a/(a-1) \approx 3^{1/150} $$
 Thus, the basis 3 makes a liaison between $a/137$ and $a/(a-1)$, very close (2 ppm) to the Bond factor 137/136, central in Eddington's theory \cite{Eddington}.
@@ -671,7 +671,7 @@ Thus, the basis 3 makes a liaison between $a/137$ and $a/(a-1)$, very close (2 p
 \begin{equation}
 a = (p/H)((ln(R_1/\lambdabar_e) + \gamma – 1)/(\pi^2/6 - 1)) \approx ln(R/\lambdabar e) + \Gamma + e^{\pi}
 \end{equation}
-so confirming the $R$ value to 45 ppm, a correction which is $\beta p/p_0$, within 0.2 ppm.
+so confirming the $R$ value to 45 ppm.
 
 Moreover, this confirms the central role of the Sternheimer scale factor $j = 8\pi^2/ln2$ (to 0.013 \%, 0.013 \% and 0.046 \%):
 \begin{equation}
@@ -694,7 +694,7 @@ Note that, to 10 ppm and 2 ppm:
 $
 (H/n)^2(F^2/B)^3 \approx (4/3) a^2 \approx W/2\pi \beta^4
 $
-where $W$ is the W boson-Electron mass ratio (see Section 4). Now, to 30 ppm and 20 ppm :  
+where $W$ is the W boson-Electron mass ratio. Now, to 30 ppm and 20 ppm :  
 \begin{equation}
  (F^3/a)^2 \approx (P/FH^2)^3  \approx  (a/137)(4\pi/3)(F^2/p^{1/2})^3 
 \end{equation}
@@ -706,9 +706,9 @@ confirming that $j$ and $\Gamma$ are generalised dimension, i.e., as privileged 
 
 Note that (Fig 1.):
 \begin{equation}
-m_{e} c^{2} f(\gamma\Gamma) \approx 125.2 GeV
+m_{e} c^{2} f(\gamma\Gamma) \approx 125.2~ GeV
 \end{equation}
-is close to the Higgs Boson energy, matching with the dimension index $k \approx \pi$, leading to $$\gamma\Gamma \approx (4\pi + 2) (p/d_e p_0)^2 $$ to 30 ppb.
+is close to the Higgs Boson energy, matching with the dimension index $k \approx \pi$, leading to $\gamma\Gamma \approx (4\pi + 2) (p/d_e p_0)^2 $ to 30 ppb.
 The length $\lambdabar_{e} f(\Gamma) \approx 5\times 10^{5}$ light-years is characteristic of a galaxy group radius, and $c$ times the Milankovich period. One observes also, to 0.16 \%, 1.8 ppm and 10 ppb:
 $$e^\pi \approx (\Gamma - 2)/d_e \approx a_w^{1/f}/d_e^2 \approx (16/ln2)d_e \beta p/p_0$$
 meaning that the special value in the Topological Axis $k = e^{\pi} /4 \approx 4/ln2$ corresponds to $n \approx \Gamma$.
@@ -733,7 +733,7 @@ starting from $N = 4 = u_{3} + 1/u_{3}$ , with $u_{3} = \sqrt{3} + 2$, belonging
 \begin{equation}
 u_{3}^{2^9} \approx (2(137^{2} + 48))^{64} \approx a^{a}
 \end{equation}
-defining $a$ to 39 ppm and showing that the Rydbergh term $2a^2$ plays a central role (see Eq.(33)).
+defining $a$ to 39 ppm and showing that the Rydbergh term $2a^2$ plays a central role.
 
 Also, with the Pell-Fermat generator $u_{1} = 1 + \sqrt{2}$:
 \begin{equation}
@@ -757,12 +757,11 @@ The above term $O_M^3$ appears in (0.08\%, 2.5\%,1\%, 2\% and 61 ppm):
 \begin{equation}
 e^{137e}\approx (e/3)e^{ea}\approx O_M^3 \approx 496^{60} \approx fe^{16e^\pi} \approx f^{4d137/\pi}
 \end{equation}
-implying the Green-Schwarz string dimension 496, which is the third perfect number, after 6 and 28, and tied to the Brout-Englert-Higgs boson in the Topological Axis (Fig.1). The above Bizouard constant confirms it is a computation basis, and the above relation implies, to 61 ppm:
+implying the Green-Schwarz string dimension 496, which is the third perfect number, after 6 and 28, and tied to the Brout-Englert-Higgs boson in the Topological Axis (Fig.1). The above Bizouard constant confirms its computation role, and the above relation implies, to 61 ppm:
 \begin{equation}
 lnf\approx \pi e/4d_e
 \end{equation}
-The following combination of three main dimensionless parameters is remarkable: they are the electrical
-one $a$, the Fermi ratio $F =\sqrt{a_{w}}$ and the strong Bizouard ratio $f$, to 0.05 \% and 0.13 \%:
+The following combination of three main dimensionless parameters is remarkable, to 0.05 \% and 0.13 \%:
 \begin{equation}
 F/af \approx 496\approx j^{\delta}
 \end{equation}
@@ -771,13 +770,13 @@ to the Monster shows, to 0.015\%, 1\% and 0.9 \%:
 \begin{equation}
 \Pi_{happy} \approx \delta \times a^{a} \approx j^{j^{\pi/3}} \approx (j/496)^2 \Gamma^{210}
 \end{equation}
-This confirms the above Complete Holic Principle, and the computation basis role of $\Gamma$ is moreover confirmed by, to 2\%: $$a^a \approx \Gamma^{209}$$ and the order of the Baby-Monster $$O_B\approx\Gamma^{24}$$ Now, from $209 = 137 + 3\times 24$:
+This confirms the above Complete Holic Principle, and the computation role of $\Gamma$ is moreover confirmed by, to 2\%: $$a^a \approx \Gamma^{209}$$ and the order of the Baby-Monster $$O_B\approx\Gamma^{24}$$ Now, from $209 = 137 + 3\times 24$:
 \begin{equation}
 O_B \approx (a/\Gamma)^{a/3}
 \end{equation}
 where $a/\Gamma = \pi/\gamma $ is the canonical Atiyah ratio.
 
-The total product of the 26 sporadic orders $\Pi_{26}$ verifies, with n the neutron/electron mass ratio, to 1.8 ppm:
+The total product of the 26 sporadic orders $\Pi_{26}$ verifies, with $n$ the neutron/electron mass ratio, to 1.8 ppm:
 $$ \Pi_{26} \approx (9np_0/2p^2)(R_{GC}/\lambdabar_M )$$
 Now $\Pi_{26}$ is close to $e^{4 \times 210}$, whose $a^{th}$ root is again very remarkable (65ppm, 98 ppm, 5 ppb):
 \begin{equation}
@@ -785,13 +784,13 @@ e^{4 \times 210/a} \approx 2e^{2e} \approx H/4 \approx 26 \times (2 \times 26 + 
 \end{equation}
 The ppb range precision of the last term means clearly that a rationalisation of $e^{2e}$ is occuring, where the canonic dimension 26 plays a central role.
 
-Note that, in Eq.(40), $j/496 \approx 0.229$ is close to the weak mixing angle, but $p/g_0 \approx 0.232$ is closer to the measured value 0.23116(12) \cite{Tanabashi}, where $g_0 = 7920 $ is the smallest Matthieu sporadic group order. These ratios appear as calculation basis in the product of cardinal orders of the Monster and the baby-Monster groups, to 1\%, 0.2 \%, 1 \% and 0.7\%:
+Note that $j/496 \approx 0.229$ is close to the weak mixing angle, but $p/g_0 \approx 0.232$ is closer to the measured value 0.23116(12) \cite{Tanabashi}, where $g_0 = 7920 $ is the smallest Matthieu sporadic group order. These ratios appear as calculation basis in the product of cardinal orders of the Monster and the baby-Monster groups, to 1\%, 0.2 \%, 1 \% and 0.7\%:
 \begin{equation}
 O_MO_B\approx H^{2H/a} \approx (g_0/p)^a \approx (496/j)^{137} \approx \sqrt{2}(e496^2)^{15}
 \end{equation}
 confirming the central role of 496. Note also (0.1 \%) that $O_MO_B \approx  n_{ph}/\delta^{1/2}$, where $n_{ph}\approx (3/\pi) exp(e^6/2)$ (to 0.2 \%) is the photon number in the visible universe. 
 
-From the Eqs (38), (42) and (44), by taking the $137^{th}$ root, one obtains, to 0.03 \%: $496/j \approx (ae^e/\Gamma)^{1/3}$
+From the above equations, by taking the $137^{th}$ root, one obtains, to 0.03 \%: $496/j \approx (ae^e/\Gamma)^{1/3}$
 Now $ae^e/\Gamma$ is close to $2ed_e$. More precisely (0.7 ppm):
 \begin{equation}
 a/\Gamma = \pi/\gamma \approx 2d_e \times e (p_0/p)^2 
