--- a/test.tex
+++ b/test.tex
@@ -249,7 +249,7 @@ In the standard evolutionary view, the observed homogeneity of causally disconne
 
 The topon breaks the so-called `Planck's wall` by a factor $l_{P}/\lambdabar_{M}\approx 10^{61}$. This explains why this holographic relation was long time unnoticed. Indeed, it was admitted that $l_{P}$ was the quantum of space: in fact \textit{the Planck's length is an intermediate holographic length only}.
 
-the gravitational potential energy of a critical homogeneous sphere is $-(3/5)GM^{2}/R = -
+The gravitational potential energy of a critical homogeneous sphere is $-(3/5)GM^{2}/R = -
 (3/10)Mc^{2}$, while the \textit{non-relativistic} kinetic energy of galaxies is $(3/10)Mc^{2}$ \cite{Sanchez1}. Their sum is therefore zero: the density of the so-called `dark energy` is compatible with 7/10, so that dark energy was a trivial false problem. 
 The Relativity theory is a local theory that does not apply in cosmology at large: 
 galaxies actually reach speed $c$, and, crossing the horizon, enter a Grandcosmos of radius $R_{GC}$, given, as a first approximation, by the symmetrical holographic relation, here monochrome instead of the above mono-radial one:
@@ -275,7 +275,7 @@ $N_m \lambdabar_{M}$, allowing the following holographic extension of the above 
 S_{BH} = \pi(R/l_{P})^{2} = 2\pi R/\lambdabar_{M} = 2\pi N_{m} R/\lambdabar_{m}
 \end{equation}
 This series of diametrical circles generate, by scanning, the approximation of a sphere: thus it goes 
-from the disk to the sphere with area $\pi(R/l_{P})^{2}$. Note that \textit{this justifies the factor $\frac{1}{4}$ in the BH entropy}. 
+from the disk to the sphere with area $4\pi(R/l_{P})^{2}$. Note that \textit{this justifies the factor $\frac{1}{4}$ in the BH entropy}. 
 But, for the approximation to be sufficient, \textit{the numbers $N_{m}$ must be very large}. In this way, the Cosmos-
 Computer can use the computational properties of the mathematical constants of the continuous analysis, such as $e$ and $\pi$, see section 9 and 10 (Discussion).
 
@@ -353,7 +353,7 @@ This $t_K$ value will be confirmed, in the ppb range, by the value deduced from 
 
 From the holographic two-step interaction \cite{Sanchez1}, it was deduced that the Kotov period is associated with the photon mass. With the above value, it is $m_{ph} = \lambdabar/c^{2} t_{K} \approx 1.222 \times 10^{-55}$ kg, and the graviton mass is: 
 $m_{gr}\, = m_{ph} /a_{w} \approx 3.722 \times 10^{-67} $ kg.
-The ratios with electron mass (Fig.1) corresponds respectively to n = 24 and $n = \Gamma$, the Atiyah constant (section 8.2) One notes the relation (0.1\%), very usefull for the following:
+The ratios with electron mass (Fig.1) corresponds respectively to n = 24 and $n = \Gamma$, the Atiyah constant (section 8.2). One notes the relation (0.1\%), very usefull in the following:
 \begin{equation}
 M/m_{ph} \approx (3/e)O^2_M
 \end{equation}
