--- a/test.tex
+++ b/test.tex
@@ -840,6 +840,34 @@ From Eqs. (48), (51) and (53), by taking the $137^{th}$ root, one obtains, to 0.
   \label{tab:table}
 \end{table*}
 
+\begin{table*}
+ \caption{Topological Axis Data with \textit{invariant} $R_{Hubble}  \approx$ 13.812 ~Gly (70.790 km/s$\cdot$Mpc) }
+  \centering
+  \begin{tabular}{llllll}
+    \toprule
+    \multicolumn{6}{c}{}                   \\
+    \cmidrule  
+    Element Name     & k     & d = 4k+2 & lnln(f(d)) & lnln(Measured ratio)\cite{Tanabashi} & Predictions \\
+    \midrule
+    string & 0  & 2 & 0.347 &  & $ m_{string} \approx 2.1~ MeV ~? \\
+    gluon  & 1 & 6 & 1.040 & $ & $m_{gluon} \approx 8.6~ MeV ~? \\  
+    mean pion & 2  & 10 & 1.733 & lnln(268.60)\approx 1.722 &  \\ 
+    H Atom Diameter & 2  & 10 & 1.733 & lnln(274.22) \approx 1.725  &  \\
+    Half Mean Weak Boson & 3  & 14 & 2.426 & lnln(8.378~\cdot~10^4)\approx 2.428  &   \\
+    Higgs Boson & & $\gamma\Gamma$ \approx 14.533 & 2.518 &lnln(2.449~\cdot~10^5)\approx 2.518& $m_{Higgs} \approx 125.175~ GeV ~? \\ 
+    Thermal Photon & 4  & 18 & 3.119 & lnln(hc/2k\theta_{CMB}\lambdabar_e) \approx 3.035 &  \\
+    Boson GUT pion & 5  & 22 & 3.812 & & $m_{GUT} \approx 2.30 ~\cdot~ $10^{16}$~ GeV ~? \\
+    Photon & 5.5  & 24 & 4.159 & & m_{ph} = \hbar/cl_K \approx1.2\cdot$10^{-55}kg? \\
+    Kotov perimeter & 5.5  & 24 & 4.159 & lnln(2\pi l_K /r_e)\approx~ 4.159 \\
+    Hubble perimeter & 6  & 26 & 4.5054 & 4.506(3)\cite{Bonvin} & lnln$(2\pi R_{Hubble} /\lambdabar_e)\approx$ 4.5059  \\
+    Graviton & 6  & 26 & 4.505 &  & $ m_{gr}\approx 3.7\cdot 10^{-67} kg~?$  \\
+    SuperCycle & 7  & 30 & 5.199 & & lnln$(T/t_e) \approx~ $5.199 \\
+    Topon &   & 2$e^e$ & 5.253 &  & lnln$(\lambdabar_e/\lambdabar_M) \approx 5.523 \\
+    GrandCosmos & $e^2$  &  & 5.432 & & lnln$(R_{GC}/\lambdabar_e)\approx~ $5.433  \\
+    \bottomrule
+  \end{tabular}
+  \label{tab:table}
+\end{table*}
 
 
 \subsection {The heavy leptons fine-tuning}
