--- a/test.tex
+++ b/test.tex
@@ -829,7 +829,7 @@ From Eqs. (48), (51) and (53), by taking the $137^{th}$ root, one obtains, to 0.
     mean pion & 2  & 10 & 1.733 & lnln(268.60)$\approx$ 1.722 &  \\ 
     H Atom Diameter & 2  & 10 & 1.733 & lnln(274.22) $\approx$ 1.725  &  \\
     Half Mean Weak Boson & 3  & 14 & 2.426 & lnln(8.378~$\cdot~10^4)\approx$ 2.428  &   \\
-    Higgs Boson$125.5G_eV$ & $\pi$  & 14.56 & 2.519 & 2.524 & $10^{5.420}$  \\
+    Higgs Boson & & $\gamma\Gamma \approx$ 14.533 & 2.518 &lnln(2.449$~\cdot~10^5)\approx$ 2.518& $m_{Higgs} \approx$ 125.175$~ GeV ~$ ? \\ 
     Thermal Photon & 4  & 18 & 3.120 & $6.714 \cdot 10^9 = 10^{9.827}$ & NYD \\
     Boson GUT pion & 5  & 22 & 3.794 & $10^{19.65}$ & NYD  \\
     Hubble perimeter & 6  & 26 & 4.506 & $10^{39.31}$ & NYD  \\
@@ -841,6 +841,9 @@ From Eqs. (48), (51) and (53), by taking the $137^{th}$ root, one obtains, to 0.
   \end{tabular}
   \label{tab:table}
 \end{table*}
+
+
+
 
 
 
