--- a/test.tex
+++ b/test.tex
@@ -830,14 +830,14 @@ From Eqs. (48), (51) and (53), by taking the $137^{th}$ root, one obtains, to 0.
     H Atom Diameter & 2  & 10 & 1.733 & lnln(274.22) $\approx$ 1.725  &  \\
     Half Mean Weak Boson & 3  & 14 & 2.426 & lnln(8.378~$\cdot~10^4)\approx$ 2.428  &   \\
     Higgs Boson & & $\gamma\Gamma \approx$ 14.533 & 2.518 &lnln(2.449$~\cdot~10^5)\approx$ 2.518& $m_{Higgs} \approx$ 125.175$~ GeV ~$ ? \\ 
-    Thermal Photon & 4  & 18 & 3.119 & lnln($hc/2k\theta_{CMB}\lambdabar_e) \approx$ 3.035 &  \\
-    Boson GUT pion & 5  & 22 & 3.812 & & $m_{GUT} \approx$ 2.30 $~\cdot~ 10^{16}$~$ GeV $~$\\
-    
     \bottomrule
   \end{tabular}
   \label{tab:table}
 \end{table*}
 
+
+%Thermal Photon & 4  & 18 & 3.119 & lnln($hc/2k\theta_{CMB}\lambdabar_e) \approx$ 3.035 &  \\
+   % Boson GUT pion & 5  & 22 & 3.812 & & $m_{GUT} \approx$ 2.30 $~\cdot~ 10^{16}$~$ GeV $~$\\
 %Photon & 5.5  & 24 & 4.159 & & $m_{ph} = \hbar/cl_K \approx 1.2\cdot~10^{-55}$kg? \\
     %Kotov perimeter & 5.5  & 24 & 4.159 & lnln($2\pi l_K /r_e)\approx$ $~$ 4.159 \\
     %Hubble perimeter & 6  & 26 & 4.5054 & 4.506(3)\cite{Bonvin} & lnln$(2\pi R_{Hubble} /\lambdabar_e)\approx$ 4.5059  \\
