--- a/test.tex
+++ b/test.tex
@@ -201,7 +201,7 @@ For the intermediary superstring value d = 10, there is the mean \textit{Pion}. 
     photon & 5.5  & 24 & 4.159 & & $m_{ph} = \hbar/cl_K \approx 1.2\cdot 10^{-55}~kg~?$ \\
     Kotov perimeter & 5.5  & 24 & 4.159 &lnln($2\pi l_K /r_e)\approx 4.159$ &  \\
     Hubble perimeter & 6  & 26 & 4.5054 & 4.506(3)\cite{Bonvin} & lnln$(2\pi R /\lambdabar_e)\approx$ 4.5059  \\
-    graviton & 6  & 26 & 4.505 &  & $ m_{gr}= m_{ph}/a_w \approx 3.7\cdot 10^{-67}$ kg? \\
+    graviton & 6  & 26 & 4.505 &  & $ m_{gr}= m_{ph}/a_w \approx 3.7\cdot 10^{-67} kg?$ \\
     Supercycle period & 7  & 30 & 5.199 & & lnln$(T/t_e) \approx$ 5.199 \\
     topon & - & 2$e^e$ & 5.253 &  & lnln$(\lambdabar_e/\lambdabar_M) \approx$ 5.523 \\
     Grandcosmos & $e^2$  & - & 5.432 & & lnln$(R_{GC}/\lambdabar_e)\approx$ 5.433  \\
