--- a/test.tex
+++ b/test.tex
@@ -186,7 +186,7 @@ For the intermediary superstring value d = 10, there is the mean \textit{Pion}. 
   \centering
   \begin{tabular}{llllll}
     \toprule
-    \multicolumn{6}{c}{$\lambdabar_M = 2l_P^2/R \approx 3.9989\cdot10^{-96} m$, $T = \hbar^{4} /\rho_{c}^{3/2} G_{F}^{5/2} \approx 5.4829 \cdot 10^{57} s, l_K = \lambdabar_e(a_Ga_w)^{1/2}$}                   \\
+    \multicolumn{6}{c}{$\lambdabar_M = 2l_P^2/R \approx 3.9989\cdot10^{-96} m$, $T = \hbar^{4} /\rho_{c}^{3/2} G_{F}^{5/2} \approx 5.4829 \cdot 10^{57} s, l_K = \lambdabar_e(a_Ga_w)^{1/2}, m_{gr}=a_wm_{gr}\approx 1.222\cdot10^{-55}kg$}                   \\
     \cmidrule(r){1-6}
    Physical element     & k     & d = 4k+2 & lnln(f(d)) & lnln(Measured ratio)\cite{Tanabashi} & Predictions~($\lambdabar_e = ar_e = ct_e$) \\
     \midrule
